--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
 
     <!-- Add your site or application content here -->
 
+<nav class="navbar navbar-default">
+ <div class="container-fluid">
+   <div class="navbar-header">
+     <a class="navbar-brand" href="#">WebSiteName</a>
+   </div>
+   <ul class="nav navbar-nav">
+     <li><a href="#">Home</a></li>
+     <li><a href="#">Page 1</a></li>
+     <li><a href="#">Page 2</a></li> 
+     <li><a href="#">Page 3</a></li> 
+   </ul>
+ </div>
+</nav>
+        
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
