--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
  </div>
 </nav>
 
+<footer>
+
+    <div class="row">
+    <i class="fa fa-twitter-square fa-4x"></i>
+    <i class="fa fa-facebook-square fa-4x"></i>
+    <i class="fa fa-instagram fa-4x"></i>
+    </div>
+    <div class="row">
+    <i class="fa fa-youtube-square fa-4x"></i>
+    <i class="fa fa-vimeo-square fa-4x"></i>
+    <i class="fa fa-envelope fa-4x"></i>
+    </div>
+
+
+</footer>
+
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
