--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="js/boot_slider.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/boot_slider.css" />
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -32,21 +35,78 @@
 
     <!-- Add your site or application content here -->
 
-<nav class="navbar navbar-default">
- <div class="container-fluid">
-   <div class="navbar-header">
-     <a class="navbar-brand" href="#">WebSiteName</a>
-   </div>
-   <ul class="nav navbar-nav">
-     <li><a href="#">Home</a></li>
-     <li><a href="#">Page 1</a></li>
-     <li><a href="#">Page 2</a></li> 
-     <li><a href="#">Page 3</a></li> 
-   </ul>
- </div>
-</nav>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">WebSiteName</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Page 1</a></li>
+                <li><a href="#">Page 2</a></li>
+                <li><a href="#">Page 3</a></li>
+            </ul>
+        </div>
+    </nav>
 
+    <!-- Carousel by bootstrap -->
 
+    <div class="row" id="boot_slider">
+        <div class="col-xs-12 col-lg-12" id="slider_full">
+            <div class="slider_nav col-xs-12 col-lg-12">
+                <p id="slider_next"><i class="fa-arrow-circle-right fa"></i></p>
+                <p id="slider_prev"><i class="fa-arrow-circle-left fa"></i></p>
+            </div>
+
+            <div class="col-xs-12 col-lg-12" id="slider_full_items">
+                <div class="col-xs-12 col-lg-12 slider_full_item">
+                    <div class="opacity"></div>
+                    <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1044');">
+                        <p class="text-center">
+                            <span>Slider Text</span>
+                            <span class="slider_full_desc">Your Description</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-lg-12 slider_full_item">
+                    <div class="opacity"></div>
+                    <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1043');">
+                        <p class="text-center">
+                            <span>Slider Text</span>
+                            <span class="slider_full_desc">Your Description</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-lg-12 slider_full_item">
+                    <div class="opacity"></div>
+                    <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1042');">
+                        <p class="text-center">
+                            <span>Slider Text</span>
+                            <span class="slider_full_desc">Your Description</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-lg-12 slider_full_item">
+                    <div class="opacity"></div>
+                    <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1041');">
+                        <p class="text-center">
+                            <span>Slider Text</span>
+                            <span class="slider_full_desc">Your Description</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-lg-12 slider_full_item">
+                    <div class="opacity"></div>
+                    <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1040');">
+                        <p class="text-center">
+                            <span>Slider Text</span>
+                            <span class="slider_full_desc">Your Description</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')
