--- a/index.html
+++ b/index.html
@@ -47,17 +47,16 @@
 </nav>
 
 <footer>
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <div class="row">
+    <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> -->
+        <!-- <div class="row"> -->
             <i class="fa fa-twitter-square fa-4x"></i>
             <i class="fa fa-facebook-square fa-4x"></i>
             <i class="fa fa-instagram fa-4x"></i>
-        </div>
-        <div class="row">
+        
+        <!-- <div class="row"> -->
             <i class="fa fa-youtube-square fa-4x"></i>
             <i class="fa fa-vimeo-square fa-4x"></i>
             <i class="fa fa-envelope fa-4x"></i>
-        </div>
     </div>
 </footer>
 
