--- a/index.html
+++ b/index.html
@@ -46,20 +46,75 @@
  </div>
 </nav>
 
+<!-- Carousel by jquery -->
+   <div class="carousel">
+       <div class="row" id="boot_slider">
+           <div class="col-xs-12 col-lg-12" id="slider_full">
+               <div class="slider_nav col-xs-12 col-lg-12">
+                   <p id="slider_next"><i class="fa-arrow-circle-right fa"></i></p>
+                   <p id="slider_prev"><i class="fa-arrow-circle-left fa"></i></p>
+               </div>
+
+               <div class="col-xs-12 col-lg-12" id="slider_full_items">
+                   <div class="col-xs-12 col-lg-12 slider_full_item">
+                       <div class="opacity"></div>
+                       <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1044');">
+                           <p class="text-center">
+                               <span>Slider Text</span>
+                               <span class="slider_full_desc">Your Description</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-xs-12 col-lg-12 slider_full_item">
+                       <div class="opacity"></div>
+                       <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1043');">
+                           <p class="text-center">
+                               <span>Slider Text</span>
+                               <span class="slider_full_desc">Your Description</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-xs-12 col-lg-12 slider_full_item">
+                       <div class="opacity"></div>
+                       <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1042');">
+                           <p class="text-center">
+                               <span>Slider Text</span>
+                               <span class="slider_full_desc">Your Description</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-xs-12 col-lg-12 slider_full_item">
+                       <div class="opacity"></div>
+                       <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1041');">
+                           <p class="text-center">
+                               <span>Slider Text</span>
+                               <span class="slider_full_desc">Your Description</span>
+                           </p>
+                       </div>
+                   </div>
+                   <div class="col-xs-12 col-lg-12 slider_full_item">
+                       <div class="opacity"></div>
+                       <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1040');">
+                           <p class="text-center">
+                               <span>Slider Text</span>
+                               <span class="slider_full_desc">Your Description</span>
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </div>
+
 <footer>
-    <!-- <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12"> -->
-        <!-- <div class="row"> -->
             <i class="fa fa-twitter-square fa-4x"></i>
             <i class="fa fa-facebook-square fa-4x"></i>
             <i class="fa fa-instagram fa-4x"></i>
-        
-        <!-- <div class="row"> -->
             <i class="fa fa-youtube-square fa-4x"></i>
             <i class="fa fa-vimeo-square fa-4x"></i>
             <i class="fa fa-envelope fa-4x"></i>
     </div>
 </footer>
-
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script>
