--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">WebSiteName</a>
+                <a class="navbar-brand" href="#">Yes Tour Africa</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="#">Home</a></li>
@@ -110,13 +110,17 @@
     </div>
 
     <footer>
-        <i class="fa fa-twitter-square fa-4x"></i>
-        <i class="fa fa-facebook-square fa-4x"></i>
-        <i class="fa fa-instagram fa-4x"></i>
-        <i class="fa fa-youtube-square fa-4x"></i>
-        <i class="fa fa-vimeo-square fa-4x"></i>
-        <i class="fa fa-envelope fa-4x"></i>
+        <a href="" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
+        <a href="" target="_blank"><i class="fa fa-facebook-square fa-4x"></i></a>
+        <a href="" target="_blank"><i class="fa fa-instagram fa-4x"></i></a>
+        <a href="" target="_blank"><i class="fa fa-youtube-square fa-4x"></i></a>
+        <a href="" target="_blank"><i class="fa fa-vimeo-square fa-4x"></i></a>
+        <a href="mailto:yestourafrica@gmail.com"><i class="fa fa-envelope fa-4x"></i></a>
         </div>
+
+        <p>
+          ©2016 Fan et Vince, startup weekend rbx
+        </p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
