add google map in index

--- a/index.html
+++ b/index.html
@@ -50,66 +50,70 @@
     </nav>
 
     <!-- Carousel by jquery -->
-       <div class="carousel">
-           <div class="row">
-               <div class="boot_slider">
-                   <div class="col-xs-12 col-lg-12" id="slider_full">
-                       <div class="slider_nav col-xs-12 col-lg-12">
-                           <p id="slider_next"><i class="fa-arrow-circle-right fa"></i></p>
-                           <p id="slider_prev"><i class="fa-arrow-circle-left fa"></i></p>
-                       </div>
+    <div class="carousel">
+        <div class="row">
+            <div class="boot_slider">
+                <div class="col-xs-12 col-lg-12" id="slider_full">
+                    <div class="slider_nav col-xs-12 col-lg-12">
+                        <p id="slider_next"><i class="fa-arrow-circle-right fa"></i></p>
+                        <p id="slider_prev"><i class="fa-arrow-circle-left fa"></i></p>
+                    </div>
 
-                       <div class="col-xs-12 col-lg-12" id="slider_full_items">
-                           <div class="col-xs-12 col-lg-12 slider_full_item">
-                               <div class="opacity"></div>
-                               <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1044');">
-                                   <p class="text-center">
-                                       <span>Slider Text</span>
-                                       <span class="slider_full_desc">Your Description</span>
-                                   </p>
-                               </div>
-                           </div>
-                           <div class="col-xs-12 col-lg-12 slider_full_item">
-                               <div class="opacity"></div>
-                               <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1043');">
-                                   <p class="text-center">
-                                       <span>Slider Text</span>
-                                       <span class="slider_full_desc">Your Description</span>
-                                   </p>
-                               </div>
-                           </div>
-                           <div class="col-xs-12 col-lg-12 slider_full_item">
-                               <div class="opacity"></div>
-                               <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1042');">
-                                   <p class="text-center">
-                                       <span>Slider Text</span>
-                                       <span class="slider_full_desc">Your Description</span>
-                                   </p>
-                               </div>
-                           </div>
-                           <div class="col-xs-12 col-lg-12 slider_full_item">
-                               <div class="opacity"></div>
-                               <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1041');">
-                                   <p class="text-center">
-                                       <span>Slider Text</span>
-                                       <span class="slider_full_desc">Your Description</span>
-                                   </p>
-                               </div>
-                           </div>
-                           <div class="col-xs-12 col-lg-12 slider_full_item">
-                               <div class="opacity"></div>
-                               <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1040');">
-                                   <p class="text-center">
-                                       <span>Slider Text</span>
-                                       <span class="slider_full_desc">Your Description</span>
-                                   </p>
-                               </div>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
+                    <div class="col-xs-12 col-lg-12" id="slider_full_items">
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1044');">
+                                <p class="text-center">
+                                    <span>Slider Text</span>
+                                    <span class="slider_full_desc">Your Description</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1043');">
+                                <p class="text-center">
+                                    <span>Slider Text</span>
+                                    <span class="slider_full_desc">Your Description</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1042');">
+                                <p class="text-center">
+                                    <span>Slider Text</span>
+                                    <span class="slider_full_desc">Your Description</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1041');">
+                                <p class="text-center">
+                                    <span>Slider Text</span>
+                                    <span class="slider_full_desc">Your Description</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-lg-12 slider_full_item">
+                            <div class="opacity"></div>
+                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1040');">
+                                <p class="text-center">
+                                    <span>Slider Text</span>
+                                    <span class="slider_full_desc">Your Description</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="mapgoogle">
+        <iframe src="https://www.google.com/maps/d/embed?mid=zQMgsNxM0OMc.kYEnzsscMnNc&hl=fr" width="100%" height="480"></iframe>
+    </div>
 
     <footer>
         <a href="" target="_blank"><i class="fa fa-twitter-square fa-4x"></i></a>
@@ -121,7 +125,7 @@
         </div>
 
         <p>
-          ©2016 Fan et Vince, startup weekend rbx
+            ©2016 Fan et Vince, startup weekend rbx
         </p>
     </footer>
 
