add div in home-fr

--- a/index.html
+++ b/index.html
@@ -111,8 +111,16 @@
         </div>
     </div>
 
+    <div class="projet">
+
+    </div>
+
     <div class="mapgoogle">
         <iframe src="https://www.google.com/maps/d/embed?mid=zQMgsNxM0OMc.kYEnzsscMnNc&hl=fr" width="100%" height="480"></iframe>
+    </div>
+
+    <div class="team">
+
     </div>
 
     <footer>
