create Index & Home section comment in mains.css

--- a/home.html
+++ b/home.html
@@ -41,10 +41,11 @@
                 <a class="navbar-brand" href="#">Yes Tour Africa</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">PAYS</a></li>
+                <li><a href="#">PORTRAITS</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </div>
     </nav>
@@ -112,6 +113,10 @@
     </div>
 
     <div class="projet">
+        <p class="project">
+            LE PROJET
+
+        </p>
 
     </div>
 
