redirect index to homefr

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       <h2>
                         choisissez votre langue
                       </h2>
-                        <a href="home.html"><img src="img/drag/fr.png" alt="" height="280px" width="470px" /></a>
+                        <a href="homefr.html"><img src="img/drag/fr.png" alt="" height="280px" width="470px" /></a>
                     </div>
                 </div>
             </div>
