--- a/homefr.html
+++ b/homefr.html
@@ -38,14 +38,14 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Yes Tour Africa</a>
+                <a class="navbar-brand" href="index.html">Yes Tour Africa</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PAYS</a></li>
-                <li><a href="#">PORTRAITS</a></li>
-                <li><a href="#">BLOG</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="homefr.html">HOME</a></li>
+                <li><a href="countryfr.html">PAYS</a></li>
+                <li><a href="portaitfr.html">PORTRAITS</a></li>
+                <li><a href="blog.html">BLOG</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
     </nav>
