ajout de la liste des pays sur le country fr

--- a/countryfr.html
+++ b/countryfr.html
@@ -42,7 +42,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">PAYS</a></li>
+                <li><a href="contryfr.html">PAYS</a></li>
                 <li><a href="#">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
@@ -50,82 +50,89 @@
         </div>
     </nav>
 
-    <!-- Carousel by jquery -->
-    <div class="carousel">
+    <div class="countryfr">
         <div class="row">
-            <div class="boot_slider">
-                <div class="col-xs-12 col-lg-12" id="slider_full">
-                    <div class="slider_nav col-xs-12 col-lg-12">
-                        <p id="slider_next"><i class="fa-arrow-circle-right fa"></i></p>
-                        <p id="slider_prev"><i class="fa-arrow-circle-left fa"></i></p>
+            <div class="container">
+                <div class="col-md-6">
+                    <h2>
+                        Pays anglophone
+                      </h2>
+                    <a href=""><img src="img/drag/gb.png" alt="" height="200px" width="400px" /></a>
+                    <div class="col-md-6">
+                      Nigéria
                     </div>
+                    <div class="col-md-6">
+                      kenya
+                    </div>
+                    <div class="col-md-6">
+                      Tanzanie
+                    </div>
+                    <div class="col-md-6">
+                      Rwanda
+                    </div>
+                    <div class="col-md-6">
+                      Ouganda
+                    </div>
+                    <div class="col-md-6">
+                      Afrique du Sud
+                    </div>
+                    <div class="col-md-6">
 
-                    <div class="col-xs-12 col-lg-12" id="slider_full_items">
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1044');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1043');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1042');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1041');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-lg-12 slider_full_item">
-                            <div class="opacity"></div>
-                            <div class="img_large" style="background-image:url('https://unsplash.it/1920/1080?image=1040');">
-                                <p class="text-center">
-                                    <span>Slider Text</span>
-                                    <span class="slider_full_desc">Your Description</span>
-                                </p>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="col-md-6">
+
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h2>
+                        Pays francophone
+                      </h2>
+                    <a href=""><img src="img/drag/fr.png" alt="" height="200px" width="400px" /></a>
+                    <div class="col-md-6">
+                      Senegal
+                    </div>
+                    <div class="col-md-6">
+                      Côte d'Ivoire
+                    </div>
+                    <div class="col-md-6">
+                      Comores
+                    </div>
+                    <div class="col-md-6">
+                      Madagascar
+                    </div>
+                    <div class="col-md-6">
+                      Réunion
+                    </div>
+                    <div class="col-md-6">
+                      Ile Maurice
+                    </div>
+                    <div class="col-md-6">
+                      Tchad
+                    </div>
+                    <div class="col-md-6">
+                      Gabon
+                    </div>
+                    <div class="col-md-6">
+                      Mali
+                    </div>
+                    <div class="col-md-6">
+                      Mauritanie
+                    </div>
+                    <div class="col-md-6">
+                      Burkina-Faso
+                    </div>
+                    <div class="col-md-6">
+                      Cameroun
+                    </div>
+                    <div class="col-md-6">
+                      Centrafrique
+                    </div>
+                    <div class="col-md-6">
+                      Benin
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="projet">
-        <p class="project">
-            LE PROJET
-
-        </p>
-
-    </div>
-
-    <div class="mapgoogle">
-        <iframe src="https://www.google.com/maps/d/embed?mid=zQMgsNxM0OMc.kYEnzsscMnNc&hl=fr" width="100%" height="480"></iframe>
-    </div>
-
-    <div class="team">
-
     </div>
 
     <footer>
