--- a/homefr.html
+++ b/homefr.html
@@ -42,7 +42,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">PAYS</a></li>
+                <li><a href="contryfr.html">PAYS</a></li>
                 <li><a href="#">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
@@ -118,105 +118,105 @@
 
         </p>
 
- <!-- jumbotron -->
-  <div class="jumbotron">
-    <div class="container">
-      <h2>Team YES TOUR AFRICA</h2>
-      <p>Retrouvez ici la page des contributeurs de l'aventure YESTourAfrica. </p>
-    </div>
-  </div>
+        <!-- jumbotron -->
+        <div class="jumbotron">
+            <div class="container">
+                <h2>Team YES TOUR AFRICA</h2>
+                <p>Retrouvez ici la page des contributeurs de l'aventure YESTourAfrica. </p>
+            </div>
+        </div>
 
-  <div class="container">
-    <!-- Contributors Panel -->
-    <!-- First Line Contributors -->
-    <div class="row">
+        <div class="container">
+            <!-- Contributors Panel -->
+            <!-- First Line Contributors -->
+            <div class="row">
 
-      <!-- Sandrine -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/Hachemi.png" alt="El-Hachemi Harizi" />
-        <h3>Sandrine NAGUERTIGA</h3>
-        <p>Porteur de Projet</p>
-        <!-- <a href="">
+                <!-- Sandrine -->
+                <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                    <img class="portrait" src="img/Hachemi.png" alt="El-Hachemi Harizi" />
+                    <h3>Sandrine NAGUERTIGA</h3>
+                    <p>Porteur de Projet</p>
+                    <!-- <a href="">
                     <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" /></a> -->
-        <a href="https://twitter.com/HachemiHarizi">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
-        </a>
-      </div>
+                    <a href="https://twitter.com/HachemiHarizi">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+                    </a>
+                </div>
 
-      <!-- Justine -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/n3xt.png" alt="Bertand Dupont" />
-        <h3>Justine MOURTADHOI</h3>
-        <p>Porteur de Projet</p>
-        <a href="https://www.facebook.com/dupont.bertrand.profil?fref=ts">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" />
-        </a>
-        <a href="https://twitter.com/Ber_n3xt">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
-        </a>
-      </div>
+                <!-- Justine -->
+                <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                    <img class="portrait" src="img/n3xt.png" alt="Bertand Dupont" />
+                    <h3>Justine MOURTADHOI</h3>
+                    <p>Porteur de Projet</p>
+                    <a href="https://www.facebook.com/dupont.bertrand.profil?fref=ts">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" />
+                    </a>
+                    <a href="https://twitter.com/Ber_n3xt">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+                    </a>
+                </div>
 
-      <!-- Auriane -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/master-san.png" alt="Antoine Soorbeek" />
-        <h3>Auriane Goullard</h3>
-        <p>Conseil e-business</p>
-        <a href="https://www.facebook.com/antoine.soorbeek?fref=ts">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" />
-        </a>
-        <!-- <a href="">
+                <!-- Auriane -->
+                <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                    <img class="portrait" src="img/master-san.png" alt="Antoine Soorbeek" />
+                    <h3>Auriane Goullard</h3>
+                    <p>Conseil e-business</p>
+                    <a href="https://www.facebook.com/antoine.soorbeek?fref=ts">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/fb.png" alt="Icone Facebook" />
+                    </a>
+                    <!-- <a href="">
                         <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.pngg" alt="Icone Twitter" />
                     </a> -->
-      </div>
+                </div>
 
 
 
-      <!-- François -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/fan-base.png" alt="François Deféver" />
-        <h3>François Deféver</h3>
-        <p>Développeur Junior</p>
-        <a href="https://www.facebook.com/Francois.Fan.Defever">
-          <i class="fa fa-facebook-square fa-2x"></i>
-        </a>
-        <a href="https://twitter.com/FD_NPC">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
-        </a>
-      </div>
+                <!-- François -->
+                <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                    <img class="portrait" src="img/fan-base.png" alt="François Deféver" />
+                    <h3>François Deféver</h3>
+                    <p>Développeur Junior</p>
+                    <a href="https://www.facebook.com/Francois.Fan.Defever">
+                        <i class="fa fa-facebook-square fa-2x"></i>
+                    </a>
+                    <a href="https://twitter.com/FD_NPC">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+                    </a>
+                </div>
 
-      <!-- Vincent -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/akvince.png" alt="Vincent Deflandre" />
-        <h3>Vincent Deflandre</h3>
-        <p>Développeur Junior</p>
-        <a href="https://twitter.com/kiravince">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
-        </a>
-        <ul class="list-inline intro-social-buttons">
-          <li>
-            <p><a class="button skillcode" href="https://github.com/akvince" role="button">GitHub &raquo;</a></p>
-          </li>
-        </ul>
-      </div>
+                <!-- Vincent -->
+                <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                    <img class="portrait" src="img/akvince.png" alt="Vincent Deflandre" />
+                    <h3>Vincent Deflandre</h3>
+                    <p>Développeur Junior</p>
+                    <a href="https://twitter.com/kiravince">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+                    </a>
+                    <ul class="list-inline intro-social-buttons">
+                        <li>
+                            <p><a class="button skillcode" href="https://github.com/akvince" role="button">GitHub &raquo;</a></p>
+                        </li>
+                    </ul>
+                </div>
 
-      <!-- Anas -->
-      <div class="col-xs-12 col-sm-6 col-md-4 text-center">
-        <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
-        <h3>Anas Khtib</h3>
-        <p>Développeur Junior</p>
-        <a href="https://twitter.com/Anas_khtib">
-          <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
-        </a>
-        <ul class="list-inline intro-social-buttons">
-          <li>
-            <p><a class="button skillcode" href="https://github.com/Anas-k" role="button">GitHub &raquo;</a></p>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!-- /Contributors Panel -->
-  </div>
-  <!-- /container -->
+                <!-- Anas -->
+                <div class="col-xs-12 col-sm-6 col-md-4 text-center">
+                    <img class="portrait" src="img/231367thorkov.png" alt="Anas Khtib" />
+                    <h3>Anas Khtib</h3>
+                    <p>Développeur Junior</p>
+                    <a href="https://twitter.com/Anas_khtib">
+                        <img class="social-icon" src="img/Circle Icons Pack/512x512/twitter.png" alt="Icone Twitter" />
+                    </a>
+                    <ul class="list-inline intro-social-buttons">
+                        <li>
+                            <p><a class="button skillcode" href="https://github.com/Anas-k" role="button">GitHub &raquo;</a></p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /Contributors Panel -->
+        </div>
+        <!-- /container -->
     </div>
 
     <div class="mapgoogle">
