mise en place de la place des pays avec cover de test

--- a/countryfr.html
+++ b/countryfr.html
@@ -35,6 +35,7 @@
 
     <!-- Add your site or application content here -->
 
+    <div class="countrycover">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -42,94 +43,97 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="#">HOME</a></li>
-                <li><a href="contryfr.html">PAYS</a></li>
+                <li><a href="countryfr.html">PAYS</a></li>
                 <li><a href="#">PORTRAITS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
             </ul>
         </div>
     </nav>
+    <h1>Pour chaque pays étudié, retrouvez les ressources suivantes :</h1>
+
+
+        <!-- <img src="img/southafrica.jpg" alt="" height="100%" width="100%"/> -->
+      </div>
 
     <div class="countryfr">
         <div class="row">
             <div class="container">
                 <div class="col-md-6">
                     <h2>
-                        Pays anglophone
+                        Pays francophone
                       </h2>
-                    <a href=""><img src="img/drag/gb.png" alt="" height="200px" width="400px" /></a>
                     <div class="col-md-6">
-                      Nigéria
+                        <a href="#">Senegal</a>
                     </div>
                     <div class="col-md-6">
-                      kenya
+                        <a href="#">Côte d'Ivoire</a>
                     </div>
                     <div class="col-md-6">
-                      Tanzanie
+                        <a href="#">Comores</a>
                     </div>
                     <div class="col-md-6">
-                      Rwanda
+                        <a href="#">Madagascar</a>
                     </div>
                     <div class="col-md-6">
-                      Ouganda
+                        <a href="#">Réunion</a>
                     </div>
                     <div class="col-md-6">
-                      Afrique du Sud
+                        <a href="#">Ile Maurice</a>
                     </div>
                     <div class="col-md-6">
-
+                        <a href="#">Tchad</a>
                     </div>
                     <div class="col-md-6">
-
+                        <a href="#">Gabon</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Mali</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Mauritanie</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Burkina-Faso</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Cameroun</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Centrafrique</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">Benin</a>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h2>
-                        Pays francophone
-                      </h2>
-                    <a href=""><img src="img/drag/fr.png" alt="" height="200px" width="400px" /></a>
-                    <div class="col-md-6">
-                      Senegal
-                    </div>
-                    <div class="col-md-6">
-                      Côte d'Ivoire
-                    </div>
-                    <div class="col-md-6">
-                      Comores
-                    </div>
-                    <div class="col-md-6">
-                      Madagascar
-                    </div>
-                    <div class="col-md-6">
-                      Réunion
-                    </div>
-                    <div class="col-md-6">
-                      Ile Maurice
-                    </div>
-                    <div class="col-md-6">
-                      Tchad
-                    </div>
-                    <div class="col-md-6">
-                      Gabon
-                    </div>
-                    <div class="col-md-6">
-                      Mali
-                    </div>
-                    <div class="col-md-6">
-                      Mauritanie
-                    </div>
-                    <div class="col-md-6">
-                      Burkina-Faso
-                    </div>
-                    <div class="col-md-6">
-                      Cameroun
-                    </div>
-                    <div class="col-md-6">
-                      Centrafrique
-                    </div>
-                    <div class="col-md-6">
-                      Benin
-                    </div>
+                  <h2>
+                    Pays anglophone
+                  </h2>
+                  <div class="col-md-6">
+                    <a href="#">Nigéria</a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#">kenya</a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#">Tanzanie</a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#">Rwanda</a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#">Ouganda</a>
+                  </div>
+                  <div class="col-md-6">
+                    <a href="#">Afrique du Sud</a>
+                  </div>
+                  <div class="col-md-6">
+
+                  </div>
+                  <div class="col-md-6">
+
+                  </div>
                 </div>
             </div>
         </div>
